# Trestle

./: .gitignore  .gitlab-ci.yml  BUILDING.md  CMakeLists.txt  LICENCE  NOTES.md  README.md  Readme.md  TODO.md  Vector3.cpp  Vector3.hpp  a  build.json  build.py  build.xml  prepenv  test_v3.cpp
assets/: config.cfg  config.ini  config.xml  game.xml  init.lua
assets/gfx/: textures.xml
assets/levels/: basic.xml  pcgroom.lua  test.lua  test.xml  test2.xml  test3.xml
assets/mesh/: cube.mesh  cube4.xml  player.xml  test.xml
assets/rooms/: aroom.lua  basic.lua  include.lua  test0349.lua
assets/scenes/: test.xml  twocubes.xml
assets/scripts/: enums.lua  include.lua  m_options.lua  main.lua  menu.lua  startup.lua
assets/scripts/jax/: startup.jax  test.jax
assets/shaders/: frag.glsl  frag2.glsl  gui.glsl  main.glsl  test.glsl  text.glsl  uibox.glsl  vertex.glsl
assets/tests/: simple.xml
doc/: Allocator.md  Deprecated.md  Dggtp.md  Entity Lifetimes.md  Melon UI.md  Physics.md  Rationale.md  Strings.md  World Struct Deprecation.md  Worlds.md
docs/: Allocator.md  Building.md  Maths.md  Scipting language.md  Story.md  Subsystem organisation.md  language_p1.md
docs/Blisk/: example.blisk  level.blisk
docs/Outdated/: Building.md  General.md  OpenGL Notes.md  Readme.md
docs/Outdated/Old/: INI.md
old/: array.c  enttest.c  flag.c  gameplay.c  generic.c  phys.h  physent.h  polar.cpp  vulkan.c  xml2test.txt
old/gl/: font.h  graphics.h  image.h  window.c
old/old_utils_2021-11-04/: bag.h  http.c  load.h
old/oldui/: uibox.h
old/world/: gamestate.c  gamestate.h  world.h
raw/: README.txt
raw/lmms/: 0.mmpz  1.mmpz  challange0-01.mmpz  challange0-02.mmpz  challange0.mmpz  prj0-01.mmpz  prj0.mmpz  proj1-01.mmpz  proj1-02.mmpz  proj1.mmpz  proj2.mmpz  proj2.mmpz.bak
raw/mesh/: 1.blend  1.blend1  2.blend  2.blend1  drhead.blend  post1.blend  untitled.blend  you_win.blend  you_win.blend1
raw/segments/: TestStage_trio.blend1
raw/sfx/: anno1.flac
res/: talk.txt
source/: graphics.c  graphics.h  includes.h  main.c  main.h  object.c  object.h  scene.c  scene.h  version.h  version.k
source/graphics/: graphics.c  graphics.h
source/scene/: scene.c  scene.h
src/: CMakeLists.txt  StringStringTable.c  StringStringTable.h  alloc.c  assoc.c  assoc.cpp  game.c  game.h  graphics.c  graphics.cpp  graphics.h  graphics.hpp  linux_main.cpp  main.c  main.cpp  systems.c  systems.h  test.c  test.h  types.c  types.h  util
src/compute/: compute.c  compute.h  vksock.c  vksock.h  vulkan.c  vulkan.h
src/ecs/: compo.h  world.h
src/game/: box.c  box.h  components.c  components.h  context.h  ent.c  ent.h  gameplay.c  gameplay.h  gamescript.c  gamescript.h  level.c  level.h  phys.c  physent.c  rect.c  rect.h  scripting.c  scripting.h  scriptman.c  scriptman.h  seg.c  types.h
src/gameplay/: gameplay.c
src/generic/: compo.h  transform.c  transform.h  world.c  world.h
src/global/: reg.c  reg.h  supervisor.c  supervisor.h
src/graph/: graph.c  graph.h
src/graphics/: .opengl.c.kate-swp  components.c  components.h  font.c  font.h  genmesh.txt  gl_incl.h  glad.c  glad.h  glad_.h  glutils.h  graphics.c  graphics.h  graphics_entity.c  image.c  image.h  mesh.c  mesh.h  meshwisk.c  meshwisk.h  mgmt_texture.c  mgmt_texture.h  opengl.c  opengl.h  opengl_1.h  texture.c  texture.h  types.h  vertex1.h  vertex2d.h  vertex3d.h  vulkan.c  vulkan.h  window.c  window.h
src/input/: glfwi.c  glfwi.h  input.c  input.h
src/io/: config.c  config.h  configfile.c  configfile.h  fs.c  fs.h  ini.h  input.c  input.h  load.c  load.h  xml.c
src/linux/: main.c  main.h
src/math/: vector2.c  vector2.h  vector2.hpp  vector3.c  vector3.cpp  vector3.h  vector3.hpp
src/misc/: grpreq.h
src/old/: arsealloc.c  dictionary.c  dictionary.h  first_realloc.c  generic.c  generic.h  vulkan.h
src/phys/: phys.c  phys.h
src/physics/: physics.c  physics.h
src/platform/: fs.c  fs.h
src/resman/: resman.c  resman.h
src/util/: .gen_util_h.py  algebra.c  algebra.h  alloc.c  alloc.h  args.c  args.h  array.c  array.h  audio.c  audio.h  bag.c  bag.h  bezsurf.c  bezsurf.h  bezsurfa.c  bezsurfa.h  bitmap.c  bitmap.h  clocker.c  clocker.h  config.c  config.h  dict.c  dict.h  dstring.c  dstring.h  fail.c  fail.h  flag.c  flag.h  fs.c  fs.h  hash.c  hash.h  http.h  ini.c  ini.h  json.c  json.h  (+44 more)
src/vulkan/: core.c  core.h
src/window/: framebuffer.c  framebuffer.h  window.c  window.h
src/world/: compo.c  compo.h  graphics.c  oldui.h  scripting.c  seg.c  seg.h  transform.c  transform.h  world.c  world.h
src/world/compo/: graphics.c  graphics.h
src/world/world/: makebox.h  mesh.h  uibox.h  uitext.h
src/wrekt/: README.md  wrektconfig.h
stuff/: TestStage_trio.blend  dragon_2021-01-24.blend
temp/src/: test.c.output  test.h.output  types.c.output  types.h.output
temp/src/game/: scripting.h.output
temp/src/graphics/: font.h.output  gl_incl.h.output  image.h.output  vertex2d.h.output  vertex3d.h.output  window.c.output  window.h.output
test_project/: init.lua
test_project/shaders/: gui.glsl  main.glsl
tests/: complex.xml  config.xml
tools/: decls-stream.py  generate_version_headers.py  hashtable.py  make_bundle.py  pg.py  test.bundle
tools/bundle_test/: New Text Document.txt
